[gd_scene load_steps=12 format=3 uid="uid://c8pjb5yqu604p"]

[ext_resource type="PackedScene" uid="uid://c1ph53byo1unb" path="res://Assets/Scences/UI/GUI/GUI_Play.tscn" id="1_c82bp"]
[ext_resource type="Script" path="res://Assets/Scripts/UI/World Root/World_Root.gd" id="1_fswvq"]
[ext_resource type="Script" path="res://Assets/Scripts/Utilities/Game_manager/game_manager.gd" id="1_n3k3x"]
[ext_resource type="PackedScene" uid="uid://diiw7skynmbb1" path="res://Assets/Scences/Stages/Taiga/taiga_a_1.tscn" id="3_374es"]
[ext_resource type="PackedScene" uid="uid://dk0n5e4gmj3p3" path="res://Assets/Scences/Items/Bullets/Bullets/player.tscn" id="3_xb5hv"]
[ext_resource type="Script" path="res://Assets/Scripts/Utilities/Save_Manager/SaveLoadManager.gd" id="5_dhs1r"]
[ext_resource type="FontFile" uid="uid://bv6xsykw7vcai" path="res://Assets/Fonts/DisposableDroidBB_bld.ttf" id="5_x361y"]
[ext_resource type="PackedScene" uid="uid://d2kow5kkphlx6" path="res://Assets/Scences/UI/Mission_Log/mission.tscn" id="6_qn67d"]
[ext_resource type="PackedScene" uid="uid://ljy4srl7uqw4" path="res://Assets/Scences/UI/Wolf_Almanac/Main_Menu/alamanac_main_menu.tscn" id="8_7w300"]
[ext_resource type="AudioStream" uid="uid://dvqtsqnkxmd3c" path="res://Assets/Music/SFX/Normal_Button/Click button.mp3" id="9_iibvp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_te26f"]
bg_color = Color(0, 1, 1, 1)
corner_radius_top_left = 5

[node name="World_Stages" type="Node2D"]
process_mode = 3
script = ExtResource("1_n3k3x")

[node name="WorldRoot" type="Node2D" parent="."]
script = ExtResource("1_fswvq")

[node name="Taiga_A1_Word_Starter" parent="WorldRoot" instance=ExtResource("3_374es")]

[node name="Player" parent="WorldRoot" instance=ExtResource("3_xb5hv")]
world_root = NodePath("..")
is_machete_equip = true
is_burst_garou_equip = true

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="GuiPlay" parent="UI" instance=ExtResource("1_c82bp")]
top_level = true

[node name="Mission" parent="UI" instance=ExtResource("6_qn67d")]
top_level = true
anchor_left = 0.857
anchor_top = 0.161
anchor_right = 0.996
anchor_bottom = 0.461
offset_left = -5.95996
offset_top = 0.0799866
offset_right = 0.119995
offset_bottom = 0.0799866
grow_horizontal = 0

[node name="Save" type="Button" parent="UI"]
top_level = true
offset_left = 297.0
offset_top = 676.0
offset_right = 361.0
offset_bottom = 708.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_x361y")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_te26f")
text = "Save"

[node name="Load" type="Button" parent="UI"]
top_level = true
offset_left = 670.0
offset_top = 676.0
offset_right = 734.0
offset_bottom = 708.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("5_x361y")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_te26f")
text = "Load"

[node name="Almanac_Main_Menu" parent="UI" instance=ExtResource("8_7w300")]
visible = false
top_level = true

[node name="butons_sfx" type="AudioStreamPlayer2D" parent="UI"]
stream = ExtResource("9_iibvp")
area_mask = 8192

[node name="Utilities" type="Node" parent="."]

[node name="Save_Loader" type="Node" parent="Utilities" groups=["Save_Loader"]]
script = ExtResource("5_dhs1r")

[connection signal="exit_reached" from="WorldRoot/Taiga_A1_Word_Starter" to="WorldRoot" method="_on_level_exit_reached"]
[connection signal="reset" from="UI/Mission" to="WorldRoot/Player" method="died"]
[connection signal="mouse_entered" from="UI/Save" to="." method="_on_enter_button"]
[connection signal="mouse_exited" from="UI/Save" to="." method="_on_exit_button"]
[connection signal="pressed" from="UI/Save" to="." method="_on_save_game"]
[connection signal="mouse_entered" from="UI/Load" to="." method="_on_enter_button"]
[connection signal="mouse_exited" from="UI/Load" to="." method="_on_exit_button"]
[connection signal="pressed" from="UI/Load" to="." method="_on_load_game"]
